# kinect-object-detection

./: .gitignore  LICENSE  README.md
example/kinect-viewer/: CMakeLists.txt  build.sh  kinect-viewer.cpp
example/object-detection/: CMakeLists.txt  build.sh  config.ini  object-detection.cpp
libobjdetect/: CMakeLists.txt  core.cpp  core.hpp  detection.cpp  detection.hpp  io.cpp  io.hpp  viewer.cpp  viewer.hpp
